--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellSpacing"20">
     <tr>
-      <td><img src="images/img.png" alt="vlada"></td>
+      <td><img src="https://avatars.githubusercontent.com/u/104059057?s=400&u=b4d59fe9f3305f200684f6e044902b70c1ab64c6&v=4" alt="vlada"></td>
       <td><h1>Vladimir Nedeljkovic</h1>
         <p><em>A third-year student at the guitar department, a great lover of technology and its development. Searching for knowlage in Front-End development, open for al suggestion and help.
         Without previous experience, but would like to get some in a future. </em></p></td>
